# django-inspire

./: CHANGELOG.md  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: config.yml
inspire/: apps.py
inspire/management/commands/: inspire.py
