[metadata]
name = django-inspire
version = 0.0.1
description = Inspiring Django Command.
long_description = file: README.md
url = https://sawirstudio.com/
author = Ricardo Sawir
author_email = sawir.ricardo@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=2.7
install_requires =
    Django >= 1.4  # Replace "X.Y" as appropriate
