[metadata]
name = django-inspire
version = 0.0.1
description = Inspiring Django Command.
url = https://sawirstudio.com/
author = Ricardo Sawir
author_email = sawir.ricardo@gmail.com
license_files = LICENSE.md
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[options]
include_package_data = true
packages = find:
python_requires = >=2.7
install_requires =
    Django >= 1.4  # Replace "X.Y" as appropriate

[flake8]
ignore = E501,W503,W504
