[metadata]
name = django-inspire
version = 0.0.3
description = Inspiring Django Command.
url = https://github.com/sawirricardo/django-inspire
author = Ricardo Sawir
author_email = sawir.ricardo@gmail.com
license_files = LICENSE.md

[options]
include_package_data = true
packages = find:
python_requires = >=2.7
install_requires =
    Django >= 1.4  # Replace "X.Y" as appropriate

[flake8]
ignore = E501,W503,W504
